--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,3 +1,3 @@
 $print-page-size: auto;
-$primary: #ee3b69;
-$font-family-sans-serif: MuseoSansCyrl, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+
+$font-family-sans-serif: Evropa, "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
