--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,4 +1,10 @@
 $print-page-size: auto;
 
+$font-size-base: 0.9rem;
+
+$black: #000;
+
+$dark: $black;
+
 $font-family-sans-serif: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $headings-font-family: Evropa, $font-family-sans-serif;
