--- a/assets/css/_common.scss
+++ b/assets/css/_common.scss
@@ -70,6 +70,19 @@ button:focus {
     text-decoration: none;
   }
 
+  &.link-triple-full {
+    border-bottom: 4px double $black;
+
+    &:before {
+      content: " ";
+      position: absolute;
+      z-index: 0;
+      bottom: -7px;
+      border-bottom: 1px solid $black;
+      width: 100%;
+    }
+  }
+
   &.link-double {
     border-bottom: 1px solid $black;
 
@@ -93,4 +106,9 @@ button:focus {
       }
     }
   }
+}
+
+header .disclaimers,
+footer.dark {
+  background: url("../img/strip-top.gif") bottom left repeat-x;
 }
