--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -2,6 +2,10 @@ header {
   color: $white;
   background-color: $black;
 
+  .disclaimers {
+    background: url("../img/strip-top.gif") bottom left repeat-x;
+  }
+
   .disclaimer {
     border-bottom: 1px solid darken($white, 50%);
   }
