--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -6,5 +6,7 @@ $black: #000;
 
 $dark: $black;
 
+$link-color: #4b98a3;
+
 $font-family-sans-serif: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $headings-font-family: Evropa, $font-family-sans-serif;
