--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -59,12 +59,55 @@ footer {
     }
   }
 
-  &.dark {
-    background: none;
-    text-shadow: 1px 1px 2px white, 0 0 1em black;
+  .img16plus {
+    width: 56px;
+    height: 66px;
+    display: block;
+    background: url("../img/16plus.png") center center no-repeat;
+  }
 
-    > .container {
-      filter: invert(100%);
+}
+
+footer.dark {
+  background: none;
+  text-shadow: 1px 1px 2px white, 0 0 1em black;
+
+  > .container {
+    filter: invert(100%);
+  }
+
+  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    // IE is not support for filter invert,
+    // so IE10+ CSS here
+
+    text-shadow: none;
+    color: $white;
+
+    .link {
+      color: $white;
+      border-color: $white;
+      &:before {
+        border-color: $white;
+      }
+    }
+
+    .border-dark {
+      border-color: $white !important;
+    }
+
+    .social-icons {
+      background-image: url('../img/fixtures/social-icons-invert.png');
+    }
+    .img16plus {
+      background-image: url('../img/fixtures/16plus-invert.png');
+    }
+    .footer-logo {
+      &.enplex {
+        background-image: url("../img/fixtures/enplex-invert.png");
+      }
+      &.pz {
+        background-image: url("../img/fixtures/pz-invert.png");
+      }
     }
   }
 }
