--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -8,5 +8,7 @@ $dark: $black;
 
 $link-color: #4b98a3;
 
+$border-color: #d2d2d4;
+
 $font-family-sans-serif: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $headings-font-family: Evropa, $font-family-sans-serif;
