--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -3,12 +3,22 @@ $print-page-size: auto;
 $font-size-base: 0.9rem;
 
 $black: #000;
+$red: #ee312f;
 
 $dark: $black;
 
-$link-color: #4b98a3;
+$primary: #4b98a3;
+$link-color: $primary;
 
 $border-color: #d2d2d4;
 
+$modal-backdrop-bg: rgba(181, 185, 195, 1);
+$modal-content-border-radius: 0;
+$modal-content-border-width: 0;
+
 $font-family-sans-serif: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $headings-font-family: Evropa, $font-family-sans-serif;
+
+$close-color: $red;
+$close-font-size: 3rem;
+$close-font-weight: 100;
