--- a/assets/css/_hello.scss
+++ b/assets/css/_hello.scss
@@ -1,5 +1,5 @@
 .download-client {
-  border: 4px double #d2d2d4;
+  border: 4px double $border-color;
   border-left: none;
   border-right: none;
   padding-left: 4rem;
