--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2,6 +2,7 @@
 
 @import "~bootstrap/scss/bootstrap";
 
+@import 'slider';
 @import 'fonts';
 @import 'sprites';
 @import 'common';
@@ -10,5 +11,6 @@
 @import '404';
 @import 'hello';
 @import 'login';
+@import 'beta';
 
 
