--- a/assets/css/_sprites.scss
+++ b/assets/css/_sprites.scss
@@ -55,10 +55,14 @@ footer.dark {
 
 .oauth-link {
   display: inline-block;
-  min-width: 60px;
+  min-width: 50px;
   text-align: center;
-  margin: 1rem 0.09rem;
+  margin: 1rem 0.09rem 0;
   color: $link-color;
+
+  @include media-breakpoint-up(sm) {
+    min-width: 70px;
+  }
 
   &:hover {
     color: $black
@@ -73,6 +77,8 @@ footer.dark {
     text-align: left;
     width: 36px;
     height: 36px;
+
+
   }
 
   &.steam {
