--- a/assets/css/_cabinet.scss
+++ b/assets/css/_cabinet.scss
@@ -30,3 +30,16 @@
     }
   }
 }
+
+.subscription-form {
+  width: 14rem;
+  max-width: 15rem;
+}
+
+.beta-test-link-wrapper {
+  min-width: 8rem;
+  max-width: 10rem;
+  border-bottom: 4px double $black;
+  padding-left: 25px;
+  background: url("../img/ok.png") left center no-repeat;
+}
