--- a/assets/css/_sprites.scss
+++ b/assets/css/_sprites.scss
@@ -60,12 +60,17 @@ footer.dark {
   margin: 1rem 0.09rem 0;
   color: $link-color;
 
+  &.gray {
+    color: #a8a8a8;
+  }
+
   @include media-breakpoint-up(sm) {
     min-width: 70px;
   }
 
   &:hover {
-    color: $black
+    color: $black;
+    text-decoration: none;
   }
 
   .oauth-icon {
@@ -77,8 +82,6 @@ footer.dark {
     text-align: left;
     width: 36px;
     height: 36px;
-
-
   }
 
   &.steam {
@@ -86,20 +89,20 @@ footer.dark {
       .oauth-icon {
         background-position: 0 0;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -36px 0;
+      &:hover {
+        .oauth-icon {
+          background-position: -36px 0;
+        }
       }
     }
     &.color {
       .oauth-icon {
         background-position: -72px 0;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -108px 0;
+      &:hover {
+        .oauth-icon {
+          background-position: -108px 0;
+        }
       }
     }
   }
@@ -109,21 +112,23 @@ footer.dark {
       .oauth-icon {
         background-position: 0 -36px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -36px -36px;
+      &:hover {
+        .oauth-icon {
+          background-position: -36px -36px;
+        }
       }
     }
+
     &.color {
       .oauth-icon {
         background-position: -72px -36px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -108px -36px;
+      &:hover {
+        .oauth-icon {
+          background-position: -108px -36px;
+        }
       }
+
     }
   }
 
@@ -132,20 +137,20 @@ footer.dark {
       .oauth-icon {
         background-position: 0 -72px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -36px -72px;
+      &:hover {
+        .oauth-icon {
+          background-position: -36px -72px;
+        }
       }
     }
     &.color {
       .oauth-icon {
         background-position: -72px -72px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -108px -72px;
+      &:hover {
+        .oauth-icon {
+          background-position: -108px -72px;
+        }
       }
     }
   }
@@ -155,20 +160,20 @@ footer.dark {
       .oauth-icon {
         background-position: 0 -108px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -36px -108px;
+      &:hover {
+        .oauth-icon {
+          background-position: -36px -108px;
+        }
       }
     }
     &.color {
       .oauth-icon {
         background-position: -72px -108px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -108px -108px;
+      &:hover {
+        .oauth-icon {
+          background-position: -108px -108px;
+        }
       }
     }
   }
@@ -178,20 +183,21 @@ footer.dark {
       .oauth-icon {
         background-position: 0 -144px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -36px -144px;
+      &:hover {
+        .oauth-icon {
+          background-position: -36px -144px;
+        }
       }
     }
+
     &.color {
       .oauth-icon {
         background-position: -72px -144px;
       }
-    }
-    &:hover {
-      .oauth-icon {
-        background-position: -108px -144px;
+      &:hover {
+        .oauth-icon {
+          background-position: -108px -144px;
+        }
       }
     }
   }
