--- a/assets/css/_common.scss
+++ b/assets/css/_common.scss
@@ -88,9 +88,17 @@ a {
 
   &.text-dark {
     color: $black;
-    border-color: $black;
+    border-bottom-color: $black;
     &:before {
-      border-color: $black;
+      border-bottom-color: $black;
+    }
+  }
+
+  &.text-red {
+    color: $red;
+    border-bottom-color: $red;
+    &:before {
+      border-bottom-color: $red;
     }
   }
 
@@ -115,11 +123,38 @@ a {
       bottom: -4px;
       border-bottom-width: 1px;
     }
+
+    &.stroke-full {
+      border-bottom-width: 4px;
+      border-bottom-style: double;
+      &:before {
+        bottom: -4px;
+        border-bottom-width: 0;
+      }
+    }
   }
 
   &.stroke-full:before {
     width: 100% !important;
     max-width: 100% !important;
+  }
+
+  &.link-back {
+    padding-left: 20px;
+
+    &:after {
+      content: "\2190";
+      position: absolute;
+      z-index: 0;
+      left: -16px;
+      top: -9px;
+      font-size: 180%;
+      font-weight: 100;
+    }
+
+    &:before {
+      left: 0;
+    }
   }
 }
 
@@ -173,7 +208,7 @@ a {
   &:focus {
     border-bottom-style: double;
     border-bottom-width: 4px;
-    border-color: $black;
+    border-bottom-color: $black;
   }
 }
 
@@ -241,4 +276,23 @@ a {
       outline: none;
     }
   }
+}
+
+.back-link-container {
+  position: absolute;
+  top: 51px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 3rem;
+  line-height: 3rem;
+
+  @include media-breakpoint-up(md) {
+    top: 67px;
+  }
+  @include media-breakpoint-up(lg) {
+    top: 73px;
+  }
+
+
 }
