--- a/assets/css/_sprites.scss
+++ b/assets/css/_sprites.scss
@@ -27,8 +27,8 @@
   text-align: left;
   width: 22px;
   height: 23px;
-  margin-right: 20;
-  border-bottom: 4px double $black;
+  margin-right: 20px;
+  border-bottom: 3px double $black;
 
   &.fb {
     background-position: -0 -0;
