--- a/assets/css/_common.scss
+++ b/assets/css/_common.scss
@@ -169,6 +169,18 @@ select::-ms-expand { display: none; }
     }
   }
 }
+// css hack for safari
+_::-webkit-full-page-media, _:future, :root .link.link-back:after {
+  left: -10px;
+  top: -8px;
+  font-size: 110%;
+}
+// and additional css hack for IE10+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  .link.link-back:after {
+    top: -10px !important;
+  }
+}
 
 .block-narrow {
   max-width: 30rem;
