--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -17,8 +17,8 @@ $modal-backdrop-bg: rgba(181, 185, 195, 1);
 $modal-content-border-radius: 0;
 $modal-content-border-width: 0;
 
-$font-family-sans-serif: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-$headings-font-family: Evropa, $font-family-sans-serif;
+$font-family-sans-serif: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$headings-font-family: Roboto, $font-family-sans-serif;
 
 $close-color: $red;
 $close-font-size: 3rem;
@@ -40,3 +40,5 @@ $border-width: 1px;
 $input-btn-border-width: $border-width;
 $input-border-width: $input-btn-border-width;
 $input-height-border: $input-border-width * 4;
+
+$headings-font-weight: 700;
